small design changes

--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -7,9 +7,9 @@
 </body>
 
 <template name="map">
-  <p>Click to put a case</p>
-  <p>Wheel to Zoom</p>
+  <p>Click to put a case, Wheel to Zoom</p>
   <button class="reset">Reset</button>
   <button class="start">Start</button><br/>
+  <br/>
   <canvas width="900" height="400"></canvas><br/>
 </template>
