giving a name to games, clicking again on start train reset its position

--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -19,6 +19,7 @@
 </template>
 
 <template name="lobby">
+  <input class="ui button" id="gameName">
   <button class="ui primary button newGame">New game</button><br/>
 
   <ul>
