--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -36,5 +36,5 @@
 </template>
 
 <template name="gameItem">
-  <li><a href="{{pathFor "game" _id=_id}}">{{name}} {{_id}}</a></li>
+  <li><a href="{{pathFor "game" _id=_id}}">{{name}}</a></li>
 </template>
