--- a/client/styles.less
+++ b/client/styles.less
@@ -9,3 +9,12 @@ body {
   font-size: 0.8em;
   font-style: italic;
 }
+
+.ui.menu {
+  background-color: #6e97ae;
+}
+
+.ui.menu .item {
+  padding: 0 10px 0 10px;
+  color: white;
+}
