--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,3 +1,7 @@
+<head>
+  <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=1">
+</head>
+
 <template name="layout">
 
   <div class="ui pointing menu">
