favicon, site title, more help

--- a/client/layout/layout.html
+++ b/client/layout/layout.html
@@ -1,5 +1,6 @@
 <head>
   <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=1">
+  <title>Trains - Parce que le nom d'un jeu c'est important</title>
 </head>
 
 <template name="layout">
@@ -12,10 +13,7 @@
     <div class="right menu"><a class="ui item">{{> loginButtons}}</a></div>
   </div>
 
-
   {{>yield}}
-
-
 
   <div class="footer">Un jeu qu'il est bien avec un nom qu'il est pas compliqu&eacute;</div>
 </template>
