--- a/client/styles.less
+++ b/client/styles.less
@@ -22,3 +22,11 @@ body {
 .tile-menu .item {
   min-width: 200px;
 }
+
+.ui.ribbon.label {
+  margin: 5px 0 5px 0;
+}
+
+.ui.comments .comment {
+  margin: 0;
+}
