--- a/client/game/game.less
+++ b/client/game/game.less
@@ -1,4 +1,4 @@
-.join-modal {
+.teams-modal {
   display: none;
   position: fixed;
   top: 0;
@@ -60,4 +60,15 @@
       text-align: center;
     }
   }
+
+  .member {
+
+    .name {
+      padding: 0;
+      font-size: 1em;
+      text-align: left;
+    }
+
+  }
+
 }
