renaming segments to paths

--- a/client/ui/layout/layout.html
+++ b/client/ui/layout/layout.html
@@ -5,7 +5,7 @@
 
 <template name="layout">
 
-  <div class="ui segmenting menu">
+  <div class="ui pathing menu">
     <a class="item" href="/">Home</a>
     {{#unless connected}}
       <div class="ui active item" href="#">Connection issue...</div>
